#
# Copyright (c) 2021, gottingen group.
# All rights reserved.
# Created by liyinbin lijippy@163.com
#

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

config_setting(
    name = "clang_compiler",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "clang",
    },
    visibility = [":__subpackages__"],
)

config_setting(
    name = "osx",
    constraint_values = [
        "@bazel_tools//platforms:osx",
    ],
)

config_setting(
    name = "ios",
    constraint_values = [
        "@bazel_tools//platforms:ios",
    ],
)

config_setting(
    name = "windows",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:windows",
    ],
    visibility = [":__subpackages__"],
)

config_setting(
    name = "ppc",
    values = {
        "cpu": "ppc",
    },
    visibility = [":__subpackages__"],
)

config_setting(
    name = "wasm",
    values = {
        "cpu": "wasm32",
    },
    visibility = [":__subpackages__"],
)

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(
    "//:copts/configure_copts.bzl",
    "CARBIN_DEFAULT_COPTS",
    "CARBIN_DEFAULT_LINKOPTS",
    "CARBIN_TEST_COPTS",
)

CARBIN_TEST_COPTS = CARBIN_TEST_COPTS + ["-std=c++17",]

cc_test(
        name = "algorithm_test",
        size = "small",
        srcs = ["algorithm/algorithm_test.cc",],
        copts = CARBIN_TEST_COPTS,
        linkopts = CARBIN_DEFAULT_LINKOPTS,
        deps = [
            "//abel:abel",
            "//testing:testing",
            "@com_google_googletest//:gtest_main",
            "@com_google_googletest//:gtest",
        ],
    )

cc_test(
            name = "atomic_test",
            size = "small",
            srcs = glob(["atomic/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "base_test",
            size = "small",
            srcs = glob(["base/*.cc", "base/*.h"]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "base_bit_cast_test",
            size = "small",
            srcs = ["base/bit_cast_test.cc"],
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "base_config_test",
            size = "small",
            srcs = ["base/config_test.cc"],
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "base_countl_zero_test",
            size = "small",
            srcs = ["base/countl_zero_test.cc"],
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "base_countr_zero_test",
            size = "small",
            srcs = ["base/countr_zero_test.cc"],
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )


cc_test(
            name = "chrono_test",
            size = "small",
            srcs = glob(["chrono/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "config_config_test",
            size = "small",
            srcs = glob(["config/config.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "config_flag_test",
            size = "small",
            srcs = glob(["config/flag_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "config_flag_def_test",
            size = "small",
            srcs = glob(["config/flag_test_def.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "config_flag_visitor_test",
            size = "small",
            srcs = glob(["config/flag_vistor_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "config_marshalling_test",
            size = "small",
            srcs = glob(["config/marshalling_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "container_test",
            size = "small",
            srcs = glob(["container/*.cc","container/*.h",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )


cc_test(
            name = "debugging_test",
            size = "small",
            srcs = glob(["debugging/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "digest_test",
            size = "small",
            srcs = glob(["digest/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "functional_test",
            size = "small",
            srcs = glob(["functional/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "hash_test",
            size = "small",
            srcs = glob(["hash/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "math_test",
            size = "small",
            srcs = glob(["math/*.cc","math/*.h",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )


cc_test(
            name = "memory_disabled_test",
            size = "small",
            srcs = glob(["memory/disabled_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_erased_ptr_test",
            size = "small",
            srcs = glob(["memory/erased_ptr_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_test",
            size = "small",
            srcs = glob(["memory/memory_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_non_detroy_test",
            size = "small",
            srcs = glob(["memory/non_detroy_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_ref_ptr_test",
            size = "small",
            srcs = glob(["memory/ref_ptr.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_memory_exception_safety_test",
            size = "small",
            srcs = glob(["memory/memory_exception_safety_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "memory_shared_ptr_test",
            size = "small",
            srcs = glob(["memory/shared_ptr_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )


cc_test(
            name = "memory_thread_local_test",
            size = "small",
            srcs = glob(["memory/thread_local_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "meta_test",
            size = "small",
            srcs = glob(["meta/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "metrics_test",
            size = "small",
            srcs = glob(["metrics/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "numeric_test",
            size = "small",
            srcs = glob(["numeric/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "random_test",
            size = "small",
            srcs = glob(["random/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "status_test",
            size = "small",
            srcs = glob(["status/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_ascii_test",
            size = "small",
            srcs = glob(["strings/ascii_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_byte_set_test",
            size = "small",
            srcs = glob(["strings/byte_set_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_case_conv_test",
            size = "small",
            srcs = glob(["strings/case_conv_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_char_map_test",
            size = "small",
            srcs = glob(["strings/char_map_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "stringschar_traits_test",
            size = "small",
            srcs = glob(["strings/char_traits_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_charconv_bigint_test",
            size = "small",
            srcs = glob(["strings/charconv_bigint_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_charconv_parse_test",
            size = "small",
            srcs = glob(["strings/charconv_parse_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_charconv_test",
            size = "small",
            srcs = glob(["strings/charconv_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_compare_test",
            size = "small",
            srcs = glob(["strings/compare_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "strings_contain_test",
            size = "small",
            srcs = glob(["strings/contain_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "strings_ends_with_test",
            size = "small",
            srcs = glob(["strings/ends_with_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_escaping_test",
            size = "small",
            srcs = glob(["strings/escaping_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_numbers_test",
            size = "small",
            srcs = glob(["strings/numbers_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_ostringstream_test",
            size = "small",
            srcs = glob(["strings/ostringstream_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_starts_with_test",
            size = "small",
            srcs = glob(["strings/starts_with_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_str_cat_test",
            size = "small",
            srcs = glob(["strings/str_cat_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_str_join_test",
            size = "small",
            srcs = glob(["strings/str_join_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_str_replace_test",
            size = "small",
            srcs = glob(["strings/str_replace_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_str_split_test",
            size = "small",
            srcs = glob(["strings/str_split_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_strip_test",
            size = "small",
            srcs = glob(["strings/strip_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
           name = "strings_trim_test",
           size = "small",
           srcs = glob(["strings/trim_test.cc",]),
           copts = CARBIN_TEST_COPTS,
           linkopts = CARBIN_DEFAULT_LINKOPTS,
           deps = [
               "//abel:abel",
               "//testing:testing",
               "@com_google_googletest//:gtest_main",
               "@com_google_googletest//:gtest",
           ],
       )

cc_test(
            name = "strings_utf8_test",
            size = "small",
            srcs = glob(["strings/utf8_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "strings_resize_uninitialized_test",
            size = "small",
            srcs = glob(["strings/resize_uninitialized_test.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )
cc_test(
            name = "system_test",
            size = "small",
            srcs = glob(["system/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "thread_test",
            size = "small",
            srcs = glob(["thread/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "trie_test",
            size = "small",
            srcs = glob(["trie/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )

cc_test(
            name = "utility_test",
            size = "small",
            srcs = glob(["utility/*.cc",]),
            copts = CARBIN_TEST_COPTS,
            linkopts = CARBIN_DEFAULT_LINKOPTS,
            deps = [
                "//abel:abel",
                "//testing:testing",
                "@com_google_googletest//:gtest_main",
                "@com_google_googletest//:gtest",
            ],
        )